--- a/index.html
+++ b/index.html
@@ -115,6 +115,34 @@
           </div>
         </div>
       </nav>
+      <!-- Banner -->
+      <div class="flex flex-col justify-center items-center gap-6">
+        <!-- Image content-->
+        <div class="max-w-[572px]">
+          <img src="assets/banner.png" class="w-full" alt="" />
+        </div>
+        <!-- text content -->
+        <div class="max-w-[1084px] flex flex-col items-center text-center">
+          <h1
+            class="text-stone-800 text-3xl md:text-5xl lg:text-6xl font-extrabold lg:leading-20 mb-6"
+          >
+            A barn house of this design has a striking appearance
+          </h1>
+          <p class="text-base text-gray-600 font-medium mb-8 max-w-[972px]">
+            The barn house captivates with its blend of rustic charm and modern
+            sophistication, featuring weathered wood, sleek metal accents, and
+            large windows that flood the space with natural light.
+          </p>
+          <button class="btn rounded-3xl bg-lime-200 px-5 py-5 ml-2 text-xl">
+            <a href=""> Book Consult </a>
+            <span
+              class="w-8 h-8 flex justify-center items-center bg-lime-500 rounded-full"
+            >
+              <i class="fa-solid fa-arrow-right -rotate-45"></i>
+            </span>
+          </button>
+        </div>
+      </div>
     </header>
   </body>
 </html>
