--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
           </p>
         </div>
         <!-- cards -->
-        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6 px-5">
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 px-5">
           <!-- card 01 -->
           <div class="bg-work-bg-1 px-6 py-10 rounded-2xl">
             <img src="assets/icons/concept.png" class="w-12 mb-3" alt="" />
@@ -334,7 +334,7 @@
                 >Explore our Latest works</a
               >
             </button>
-            <h3 class="text-2xl md:text-3xl lg:text-4xl font-bold mb-6">
+            <h3 class="text-3xl md:text-4xl lg:text-5xl font-extrabold mb-6">
               Our Latest Portfolio
             </h3>
             <p class="text-gray-700 text-base font-medium">
@@ -423,6 +423,171 @@
               class="border-1 border-gray-100 rounded-2xl p-6 col-span-1 lg:hidden md:col-span-1"
             >
               <img src="assets/img3.png" class="w-full md:h-[180px]" alt="" />
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Article and News Section -->
+      <section class="w-full py-24">
+        <!-- Container -->
+        <div class="container mx-auto">
+          <!-- Text -->
+          <div class="max-w-[678px] mx-auto text-center mb-8">
+            <button class="btn px-5 py-3 border-0 bg-lime-100 rounded-3xl mb-4">
+              <a href=""
+                ><span><i class="fa-solid fa-arrow-right mr-2"></i></span
+                >Rinterio News</a
+              >
+            </button>
+            <h3 class="text-3xl md:text-4xl lg:text-5xl font-extrabold mb-6">
+              Read Our Articles and News
+            </h3>
+            <p class="text-gray-700 text-base font-medium">
+              The barn house captivates with its blend of rustic charm and
+              modern sophistication, featuring weathered wood, sleek metal
+              accents.
+            </p>
+          </div>
+
+          <!-- cards -->
+          <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
+            <!-- card 01 -->
+
+            <div class="bg-white rounded-2xl p-6">
+              <!-- Image -->
+              <div class="mb-4">
+                <img src="assets/article1.png" class="w-full" alt="" />
+              </div>
+              <!-- Text -->
+              <div>
+                <!-- date and user -->
+                <div class="flex gap-3 mb-2">
+                  <h4 class="text-sm text-gray-600">
+                    <span
+                      ><i
+                        class="fa-solid fa-calendar-days text-xl text-gray-600 mr-2"
+                      ></i></span
+                    >July14, 2024
+                  </h4>
+                  <h4 class="text-sm text-gray-600">
+                    <span
+                      ><i
+                        class="fa-solid fa-user-tie text-xl text-gray-600 mr-2"
+                      ></i></span
+                    >By Admin
+                  </h4>
+                </div>
+                <h3 class="text-xl font-extrabold text-gray-800 mb-2">
+                  How to choose the furniture right of your home.
+                </h3>
+                <p class="text-base text-gray-500 font-medium mb-3">
+                  The barn house captivates with its blend of rustic charm and
+                  modern.
+                </p>
+                <!-- btn -->
+                <button>
+                  <a
+                    href="#"
+                    class="text-lg font-bold text-gray-900 flex items-center gap-x-3"
+                    >Read More
+                    <span
+                      class="w-8 h-8 bg-lime-400 flex justify-center items-center rounded-full"
+                      ><i class="fa-solid fa-arrow-right -rotate-45"></i></span
+                  ></a>
+                </button>
+              </div>
+            </div>
+
+            <!-- card 02 -->
+            <div class="bg-white rounded-2xl p-6">
+              <!-- Image -->
+              <div class="mb-4">
+                <img src="assets/article2.png" class="w-full" alt="" />
+              </div>
+              <!-- Text -->
+              <div>
+                <!-- date and user -->
+                <div class="flex gap-3 mb-2">
+                  <h4 class="text-sm text-gray-600">
+                    <span
+                      ><i
+                        class="fa-solid fa-calendar-days text-xl text-gray-600 mr-2"
+                      ></i></span
+                    >July14, 2024
+                  </h4>
+                  <h4 class="text-sm text-gray-600">
+                    <span
+                      ><i
+                        class="fa-solid fa-user-tie text-xl text-gray-600 mr-2"
+                      ></i></span
+                    >By Admin
+                  </h4>
+                </div>
+                <h3 class="text-xl font-extrabold text-gray-800 mb-2">
+                  How to choose the furniture right of your home.
+                </h3>
+                <p class="text-base text-gray-500 font-medium mb-3">
+                  The barn house captivates with its blend of rustic charm and
+                  modern.
+                </p>
+                <!-- btn -->
+                <button>
+                  <a
+                    href="#"
+                    class="text-lg font-bold text-gray-900 flex items-center gap-x-3"
+                    >Read More
+                    <span
+                      class="w-8 h-8 bg-lime-400 flex justify-center items-center rounded-full"
+                      ><i class="fa-solid fa-arrow-right -rotate-45"></i></span
+                  ></a>
+                </button>
+              </div>
+            </div>
+
+            <!-- card 03 -->
+            <div class="bg-white rounded-2xl p-6">
+              <!-- Image -->
+              <div class="mb-4">
+                <img src="assets/article3.png" class="w-full" alt="" />
+              </div>
+              <!-- Text -->
+              <div>
+                <!-- date and user -->
+                <div class="flex gap-3 mb-2">
+                  <h4 class="text-sm text-gray-600">
+                    <span
+                      ><i
+                        class="fa-solid fa-calendar-days text-xl text-gray-600 mr-2"
+                      ></i></span
+                    >July14, 2024
+                  </h4>
+                  <h4 class="text-sm text-gray-600">
+                    <span
+                      ><i
+                        class="fa-solid fa-user-tie text-xl text-gray-600 mr-2"
+                      ></i></span
+                    >By Admin
+                  </h4>
+                </div>
+                <h3 class="text-xl font-extrabold text-gray-800 mb-2">
+                  How to choose the furniture right of your home.
+                </h3>
+                <p class="text-base text-gray-500 font-medium mb-3">
+                  The barn house captivates with its blend of rustic charm and
+                  modern.
+                </p>
+                <!-- btn -->
+                <button>
+                  <a
+                    href="#"
+                    class="text-lg font-bold text-gray-900 flex items-center gap-x-3"
+                    >Read More
+                    <span
+                      class="w-8 h-8 bg-lime-400 flex justify-center items-center rounded-full"
+                      ><i class="fa-solid fa-arrow-right -rotate-45"></i></span
+                  ></a>
+                </button>
+              </div>
             </div>
           </div>
         </div>
