--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
         </div>
       </section>
       <!-- Count Section -->
-      <section class="container mx-auto px-5 py-8 md:p-8">
+      <section class="container mx-auto px-5 py-8">
         <!-- cards -->
         <div
           class="bg-white rounded-3xl grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4"
@@ -326,7 +326,7 @@
       <!-- Portfolio Section -->
       <section class="w-full bg-white py-24">
         <!-- Container -->
-        <div class="container mx-auto px-5 md:px-0">
+        <div class="container mx-auto px-5">
           <!-- Text -->
           <div class="max-w-[678px] mx-auto text-center mb-8">
             <button class="btn px-5 py-3 border-0 bg-lime-100 rounded-3xl mb-4">
@@ -431,7 +431,7 @@
       <!-- Article and News Section -->
       <section class="w-full py-24">
         <!-- Container -->
-        <div class="container mx-auto px-5 md:px-0">
+        <div class="container mx-auto px-5">
           <!-- Text -->
           <div class="max-w-[678px] mx-auto text-center mb-8">
             <button class="btn px-5 py-3 border-0 bg-lime-100 rounded-3xl mb-4">
@@ -602,7 +602,7 @@
       <!-- Let's Contact Section -->
       <section class="w-full py-24 bg-[url(../assets/bg.jpg)]">
         <!-- container -->
-        <div class="container mx-auto px-5 md:px-0">
+        <div class="container mx-auto px-5">
           <!-- Text -->
           <div class="max-w-[678px] mx-auto text-center mb-8">
             <button class="btn px-5 py-3 border-0 bg-lime-100 rounded-3xl mb-4">
