--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
         </div>
       </section>
       <!-- Work section  -->
-      <section class="container mx-auto py-24">
+      <section class="container mx-auto py-24 px-5">
         <!-- text -->
         <div class="max-w-[678px] mx-auto text-center mb-8">
           <button class="btn border-0 rounded-3xl bg-white mb-4">
@@ -281,7 +281,7 @@
           </p>
         </div>
         <!-- cards -->
-        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6 px-5">
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6">
           <!-- card 01 -->
           <div class="bg-work-bg-1 px-6 py-10 rounded-2xl">
             <img src="assets/icons/concept.png" class="w-12 mb-3" alt="" />
